fix (cards-form): align itens

--- a/client/src/app/cards/cards-form/cards-form.scss
+++ b/client/src/app/cards/cards-form/cards-form.scss
@@ -4,11 +4,12 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  gap: 12px;
+  margin: 20px;
 
   &__row {
     display: flex;
-    gap: 12px;
+    justify-content: center;
+    gap: 25px;
 
     @media (max-width: 640px) {
       flex-direction: column;
